2008-02-18  Kouhei Sutou  <kou@cozmixng.org>

	* test/: used test-unit-ext on RubyForge.

2008-02-17  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_element_factory.rb, test/test_plugin.rb,
	test/test_plugin_feature.rb: followed the current GStreamer changes.

2008-02-14  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst.c (rb_gst_init): called
	rbgutil_start_callback_handle_thread().

2008-01-10  Kouhei Sutou  <kou@cozmixng.org>

	* sample/type-find.rb: added type find sample.

2008-01-06  Kouhei Sutou  <kou@cozmixng.org>

	* sample/gst-inspect.rb: supported element name inspection.

	* src/rbgst-value.c: supported GST_TYPE_ARRAY.

	* sample/gst-inspect.rb: added readable check.

	* src/rbgst-mini-object.c: supported Gst::MiniObject <-> GValue
	conversion.

	* test/test_value.rb, src/rbgst-value.c: supported GstFraction and
	GstFractionRange.

	* test/test_value.rb, src/rbgst-value.c: supported GstFourcc.

	* test/test_value.rb, src/rbgst-value.c: supported GstIntRange.

2008-01-04  Kouhei Sutou  <kou@cozmixng.org>

	* sample/gst-inspect.rb: implemented print_children_info.

	* sample/gst-inspect.rb: implemented print_signals_info.

	* sample/gst-inspect.rb: implemented print_element_properties_info.

	* sample/gst-inspect.rb: implemented print_pad_info.

	* src/rbgst-element.c: cleanup style.

	* test/test_element.rb, src/rbgst-element.c: added #require_clock?
	and #provide_clock?.

	* sample/gst-inspect.rb: defined Inspector class.

	* test/test_value.rb, src/rbgst-value.c: supported GST_TYPE_LIST.

	* test/test_caps.rb, src/rbgst-caps.c: added #each and #[].

	* test/test_static_caps.rb, src/rbgst-static-caps.c: added #to_caps.

	* test/test_static_pad.rb, src/rbgst-static-caps.c: added.

	* test/test_pad_template.rb: renamed to ...
	* test/test_static_pad_template.rb: ... this.

	* sample/gst-inspect.rb: implemented print_pad_templates_info.

	* src/rbgst-pad-template.c, src/rbgst-static-pad-template.c: used
	better macros.
