@@ -1,5 +1,7 @@
 2008-02-18  Kouhei Sutou  <kou@cozmixng.org>
 
+	* sample/ogg-audio-player.rb: ensure stop.
+
 	* test/: used test-unit-ext on RubyForge.
 
 2008-02-17  Kouhei Sutou  <kou@cozmixng.org>
